Closed Bug 935274 Opened 11 years ago Closed 11 years ago

Getting wrapper (and preserving its color) from nsIHTMLCollection is slow

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: smaug, Assigned: smaug)

References

Details

(Whiteboard: [qa-])

Attachments

(3 files, 1 obsolete file)

Attached patch patchSplinter Review
The patch should cut few % of the Bug 916851's testcase.
(Although profiling is currently a bit difficult because of the regression from bug 932322)

Trying to be consistent both in style and order of method declarations.

https://tbpl.mozilla.org/?tree=Try&rev=4383fca102db
Attachment #827682 - Flags: review?(peterv)
Looks like I had pushed from broken m-i to try :/
Comment on attachment 827682 [details] [diff] [review]
patch

Needs some MOZ_OVERRIDE stuff on the subclasses, right?
(I'm not a huge fan of MOZ_OVERRIDE, at least yet)
Comment on attachment 827682 [details] [diff] [review]
patch

Review of attachment 827682 [details] [diff] [review]:
-----------------------------------------------------------------

::: content/base/src/nsContentList.h
@@ +248,5 @@
>    virtual ~nsContentList();
>  
>    // nsWrapperCache
>    using nsWrapperCache::GetWrapperPreserveColor;
> +  virtual JSObject* WrapObject(JSContext* Cx,

aCx?
Attachment #827682 - Flags: review?(peterv) → review+
Attached patch aCx (obsolete) — Splinter Review
Attached patch v2Splinter Review
Er, this is with MOZ_OVERRIDE
https://tbpl.mozilla.org/?tree=Try&rev=fb0303713a64
Attachment #830825 - Attachment is obsolete: true
https://hg.mozilla.org/mozilla-central/rev/da183762a54c
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Whiteboard: [qa-]
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: