Bug 935274, speed up getting wrapper from nsIHTMLCollection, r=peterv